--- a/MovieDB/MovieDB/Movie/Common/StringLiterals/Localizable.strings
+++ b/MovieDB/MovieDB/Movie/Common/StringLiterals/Localizable.strings
@@ -23,3 +23,7 @@
 
 //MARK: Detail Movie
 "detail-movie-favorite-button"  =   "Agregar a mis favoritos";
+
+//MARK: Generic Error Message
+"alert-error-message-title"         =   "Upss!";
+"alert-error-message-button-accept" =   "Aceptar";
